--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -265,8 +265,8 @@
    
 
     <script src="../script.js" async defer></script>
-    <script src="../projects.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+    <script src="../scripts/projects.js" async defer></script>
+
 </body>
 
 </html>
