--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -271,8 +271,7 @@
 
 
     <script src="../script.js" async defer></script>
-    <script src="../projects.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+<script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
