--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -219,8 +219,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
     <script src="../projects.js" async defer></script>
-    <script src="../script.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+<script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
