--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -253,8 +253,7 @@
 
 
     <script src="../projects.js" async defer></script>
-    <script src="../script.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+<script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
