--- a/exhibitions/youngphotographers.html
+++ b/exhibitions/youngphotographers.html
@@ -174,7 +174,8 @@
 
 
     <script src="../script.js" async defer></script>
-    <script src="../gsap.js"></script>
+    <script src="../scripts/exhibitions.js"></script>
+ 
 
 </body>
 
