--- a/projects/howtophotographylagostwo.html
+++ b/projects/howtophotographylagostwo.html
@@ -278,8 +278,7 @@
    
 
     <script src="../script.js" async defer></script>
-    <script src="../projects.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+<script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
