--- a/projects/pain-a-discomfort-or-a-trigger.html
+++ b/projects/pain-a-discomfort-or-a-trigger.html
@@ -266,8 +266,7 @@
     
 
     <script src="../script.js" async defer></script>
-    <script src="../projects.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+    <script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
