--- a/projects/toiletintoiletout.html
+++ b/projects/toiletintoiletout.html
@@ -252,8 +252,7 @@
   
 
     <script src="../script.js" async defer></script>
-    <script src="../projects.js" async defer></script>
-    <!-- <script src="countdown.js" async defer></script> -->
+<script src="../scripts/projects.js" async defer></script>
 </body>
 
 </html>
