--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -270,7 +270,7 @@
     
 
     <script src="../script.js" async defer></script>
-    <script src="../projects.js" async defer></script>
+    <script src="../scripts/projects.js" async defer></script>
 
 </body>
 
