--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href='projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='video'>video </a>
+                    <a href='video'> argumented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='exhibition'>exhibitions </a>
@@ -133,12 +133,12 @@
     <main class="index-main">
         <div class="landing-page mobile">
             <a href="projects">
-                <img class="mobile-homepage" src="images/the boys fraternity/8.webp" alt="homepage-image-mobile">
+                <img class="mobile-homepage" src="images/homepage-mobile.webp" alt="homepage-image-mobile">
             </a>
         </div>
 
         <div class="landing-page">
-            <img src="images/homepage.webp" alt="homepage-image">
+            <img  src="images/homepage.webp" alt="homepage-image">
         </div>
 
     </main>
