--- a/argurmented-reality.html
+++ b/argurmented-reality.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>video1 | neec nonso | visual artist</title>
+    <title> argumented reality | neec nonso | visual artist</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, ">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -32,6 +32,7 @@
     <meta name="twitter:title" content="neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
     <meta name="twitter:image" content="images/ogimage.png" />
+
     <!-- Style Links 
     
         <link rel="stylesheet" href="minify.css"> 
@@ -51,28 +52,27 @@
     <div class="header">
 
         <nav class='navbar'>
-
-            <a class="logo-link" href='../'>
-                <img src="../images/neec nonso logo.png" class='App-logo' alt='logo' />
+            <a class="logo-link" href="/">
+                <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
 
             <ul class='nav-list'>
 
                 <li class='list-item'>
-                    <a href='../bio'> bio</a>
+                    <a href='bio'> bio</a>
                 </li>
 
                 <li class='list-item'>
-                    <a href='../projects'>projects </a>
+                    <a href='projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../video'>video </a>
+                    <a href='video'>video </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../exhibition'>exhibitions </a>
+                    <a href='exhibition'>exhibitions </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../contact'>contact </a>
+                    <a href='contact'>contact </a>
                 </li>
 
             </ul>
@@ -88,59 +88,56 @@
 
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
-                    <img class="extra-icon-image" src="../images/logo-instagram.svg" alt='extra-icon-image' />
+                    <img class="extra-icon-image" src="images/logo-instagram.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
-                    <img class="extra-icon-image" src="../images/logo-facebook.svg" alt='extra-icon-image' />
+                    <img class="extra-icon-image" src="images/logo-facebook.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                    <img class="extra-icon-image" src="../images/logo-linkedin.svg" alt='extra-icon-image' />
+                    <img class="extra-icon-image" src="images/logo-linkedin.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                    <img class="extra-icon-image" src="../images/logo-twitter.svg" alt='extra-icon-image' />
+                    <img class="extra-icon-image" src="images/logo-twitter.svg" alt='extra-icon-image' />
                 </a>
             </li>
 
         </ul>
 
-
     </div>
 
     <!-- End of Navbar-->
 
-    <main class="video-main-container">
 
-        <div class="video-item">
+    <!-- Start of Videos -->
 
-            <h1 class="video-item-title">Video 1.</h1> <br>
+    <div class="video-main">
 
+        <hr class="topline" color="#800020" width="60%">
 
-            <p class="video-item-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat dicta culpa consequuntur
-                deleniti quod repudiandae quia perspiciatis labore, rem molestiae magni at ipsam, quisquam ducimus enim
-                tempora quam, recusandae aliquam consectetur aperiam tenetur! Consequuntur accusantium, eius asperiores
-                at autem velit a modi atque adipisci corporis, nesciunt distinctio sunt praesentium enim porro nihil
-                ullam numquam doloribus rerum, dolore voluptas saepe quo sapiente dicta? Atque harum minima
-                necessitatibus repellendus adipisci enim soluta porro et consectetur amet, ex possimus eligendi
-                temporibus ratione libero beatae officia quidem dignissimos commodi nemo. Dolores, unde voluptates.
-                Iusto atque soluta quaerat debitis reiciendis officiis quis expedita dignissimos.
-            </p>
+        <div class="container-video">
 
+            <div class="card">
+
+    
+                <a class="card-description" href="./video/1.html">
+                    <p class="project-title">video 1.</p>
+                </a>
+            </div>
 
         </div>
 
-        <div class="video-container">
-            <iframe rel="preload" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-            </iframe>
-        </div>
+        <hr class="bottom-line" color="#800020" width="60%">
 
-    </main>
+    </div>
+
+
+    <!-- End of Videos -->
 
     <!-- Start of Footer -->
 
@@ -166,12 +163,11 @@
 
     <script>
 
-
         gsap.from(".footer-container", {
             scrollTrigger: {
-                trigger: ".video-item-title",
-                start: 50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
+                trigger: ".video-main",
+                start: 500, // when the top of the trigger hits the top of the viewport
+                end: "+=700", // end after scrolling 100px beyond the start
                 // markers: true
                 scrub: 1
             },
@@ -181,25 +177,24 @@
             ease: "power1.inOut"
         });
 
-
-
         let tl = gsap.timeline({
             scrollTrigger: {
-                trigger: ".header",
+                trigger: ".container-video",
                 //   markers: true,
 
             }
         });
-
-
         tl.from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
             .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
+            .from(".topline", { y: 200, opacity: 0, duration: 1.5 })
+            .from(".video-main", { x: -200, opacity: 0, duration: 1.5 })
+            .from(".bottom-line", { y: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-          //  .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
     </script>
 
 
-    <script src="../script.js" async defer></script>
+    <script src="script.js" async defer></script>
 
 </body>
 
