--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href='projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='video'> argumented-reality </a>
+                    <a href='argurmented-reality'> argumented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='exhibition'>exhibitions </a>
