--- a/exhibitions/relebootcampexhibition.html
+++ b/exhibitions/relebootcampexhibition.html
@@ -66,9 +66,9 @@
                 <li class='list-item'>
                     <a href='../projects'>projects </a>
                 </li>
-                <li class='list-item'>
-                    <a href='../video'>video </a>
-                </li>
+            <li class='list-item'>
+                <a href='../augmented-reality'> augmented-reality </a>
+            </li>
                 <li class='list-item'>
                     <a href='../exhibition'>exhibitions </a>
                 </li>
