--- a/exhibitions/youngcontemporaries.html
+++ b/exhibitions/youngcontemporaries.html
@@ -70,7 +70,7 @@
                     <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../video'>video </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='../exhibition'>exhibitions </a>
@@ -179,6 +179,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script>
+
         var i = 0; // Start Point
         var time = 3000; // Time Between Switch
         var images = [
@@ -198,7 +199,6 @@
         }
 
 
-
         // Change Image
         function changeImg() {
             document.slide.src = images[i];
@@ -207,11 +207,12 @@
         }
 
         window.onload = changeImg;
+
     </script>
 
     <script src="../script.js" async defer></script>
     <script src="../scripts/exhibitions.js"></script>
- 
+
 
 
 </body>
