--- a/exhibitions/youngphotographers.html
+++ b/exhibitions/youngphotographers.html
@@ -67,7 +67,7 @@
                     <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../video'>video </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='../exhibition'>exhibitions </a>
@@ -120,7 +120,7 @@
     <div class="items-container">
 
         <section class="exhibition-intro">
-            <p class="exhibition-title"><a href="./exhibitions/youngphotographers">young photographers</a>
+            <p class="exhibition-title"><a href="./youngphotographers">young photographers</a>
             </p>
             <p class="exhibition-venue">alliance francaise,</p>
             <p class="exhibition-location">lagos,nigeria</p>
