--- a/exhibitions/agathering.html
+++ b/exhibitions/agathering.html
@@ -68,7 +68,7 @@
                     <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../video'>video </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='../exhibition'>exhibitions </a>
@@ -174,7 +174,7 @@
 
 
     <script src="../script.js" async defer></script>
-<script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/exhibitions.js"></script>
 
 
 </body>
