--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -65,7 +65,7 @@
                     <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../video'>video </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='../exhibition'>exhibitions </a>
