--- a/projects/pain-a-discomfort-or-a-trigger.html
+++ b/projects/pain-a-discomfort-or-a-trigger.html
@@ -66,7 +66,7 @@
                 <a href='../projects'>projects </a>
             </li>
             <li class='list-item'>
-                <a href='../video'>video </a>
+                <a href='../augmented-reality'> augmented-reality </a>
             </li>
             <li class='list-item'>
                 <a href='../exhibition'>exhibitions </a>
