--- a/projects/toiletintoiletout.html
+++ b/projects/toiletintoiletout.html
@@ -67,7 +67,7 @@
                 <a href='../projects'>projects </a>
             </li>
             <li class='list-item'>
-                <a href='../video'>video </a>
+                <a href='../augmented-reality'> augmented-reality </a>
             </li>
             <li class='list-item'>
                 <a href='../exhibition'>exhibitions </a>
