--- a/projects.html
+++ b/projects.html
@@ -111,122 +111,123 @@
     <!-- End of Navbar-->
 
     <!-- Start of Project-->
-    
 
-    <div class="blockquote-div">
-        <blockquote>
-            <h1 class="blockquote">
+    <div class="fixing-padding">
+        <div class="blockquote-div">
+            <blockquote>
+                <h1 class="blockquote">
 
-            </h1>
-        </blockquote>
-        <br>
-        <div class="blockquote-footer">
-            <cite>
-                <a id="projectnames" class="projectnames" href=""></a>
+                </h1>
+            </blockquote>
+            <br>
+            <div class="blockquote-footer">
+                <cite>
+                    <a id="projectnames" class="projectnames" href=""></a>
 
-            </cite>
+                </cite>
+            </div>
+
         </div>
 
-    </div>
+        <hr class="topline" color="#800020" width="80%">
 
-    <hr class="topline" color="#800020" width="60%">
+        <div class="card-container">
 
-    <div class="card-container">
+            <div class="card">
+                <a href="./projects/theboysfraternity">
+                    <img class="card-image" src="images/homepage 350px.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/theboysfraternity">
+                    <p class="project-title">the boys fraternity.</p>
+                </a>
+            </div>
 
-        <div class="card">
-            <a href="./projects/theboysfraternity">
-                <img class="card-image" src="images/homepage 350px.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/theboysfraternity">
-                <p class="project-title">the boys fraternity.</p>
-            </a>
-        </div>
+            <div class="card">
+                <a href="./projects/thelastburial">
+                    <img class="card-image" src="images/the last burial/Mobile/1.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/thelastburial">
+                    <p class="project-title">the last burial.</p>
+                </a>
+            </div>
 
-        <div class="card">
-            <a href="./projects/thelastburial">
-                <img class="card-image" src="images/the last burial/Mobile/1.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/thelastburial">
-                <p class="project-title">the last burial.</p>
-            </a>
-        </div>
+            <div class="card">
+                <a href="./projects/whatwasdeadwasneverdead">
+                    <img class="card-image" src="images/what was dead was never dead/Mobile/1.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/whatwasdeadwasneverdead">
+                    <p class="project-title">what was dead was never dead.</p>
+                </a>
+            </div>
 
-        <div class="card">
-            <a href="./projects/whatwasdeadwasneverdead">
-                <img class="card-image" src="images/what was dead was never dead/Mobile/1.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/whatwasdeadwasneverdead">
-                <p class="project-title">what was dead was never dead.</p>
-            </a>
-        </div>
+            <div class="card">
+                <a href="./projects/christmasandclothes">
+                    <img class="card-image" src="images/christmas and clothes/Mobile/1.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/christmasandclothes">
+                    <p class="project-title">christmas and clothes.</p>
+                </a>
+            </div>
 
-        <div class="card">
-            <a href="./projects/christmasandclothes">
-                <img class="card-image" src="images/christmas and clothes/Mobile/1.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/christmasandclothes">
-                <p class="project-title">christmas and clothes.</p>
-            </a>
-        </div>
+            <div class="card">
+                <a href="./projects/howtophotographylagos">
+                    <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/howtophotographylagos">
+                    <p class="project-title">how to photograph lagos.</p>
+                </a>
+            </div>
 
-        <div class="card">
-            <a href="./projects/howtophotographylagos">
-                <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
-                    alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/howtophotographylagos">
-                <p class="project-title">how to photograph lagos.</p>
-            </a>
-        </div>
+            <div class="card">
+                <a href="./projects/howtophotographylagostwo">
+                    <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/howtophotographylagostwo">
+                    <p class="project-title">how to photograph lagos 2.</p>
+                </a>
+            </div>
 
-        <div class="card">
-            <a href="./projects/howtophotographylagostwo">
-                <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
-                    alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/howtophotographylagostwo">
-                <p class="project-title">how to photograph lagos 2.</p>
-            </a>
-        </div>
+            <div class="card bottom">
+                <a href="./projects/theanotherbeginning">
+                    <img class="card-image" src="images/the another beginning/350px Jpeg/1.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/theanotherbeginning">
+                    <p class="project-title">the another beginning.</p>
+                </a>
+            </div>
 
-        <div class="card bottom">
-            <a href="./projects/theanotherbeginning">
-                <img class="card-image" src="images/the another beginning/350px Jpeg/1.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/theanotherbeginning">
-                <p class="project-title">the another beginning.</p>
-            </a>
-        </div>
+            <div class="card bottom">
+                <a href="./projects/toiletintoiletout">
+                    <img class="card-image" src="images/toilet in, toilet out/Mobile/2.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/toiletintoiletout">
+                    <p class="project-title">toilet in, toilet out.</p>
+                </a>
+            </div>
 
-        <div class="card bottom">
-            <a href="./projects/toiletintoiletout">
-                <img class="card-image" src="images/toilet in, toilet out/Mobile/2.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/toiletintoiletout">
-                <p class="project-title">toilet in, toilet out.</p>
-            </a>
-        </div>
+            <div class="card bottom">
+                <a href="./projects/waitingforchineke">
+                    <img class="card-image" src="images/waiting for chineke/Mobile /1.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/waitingforchineke">
+                    <p class="project-title">waiting for chineke.</p>
+                </a>
+            </div>
 
-        <div class="card bottom">
-            <a href="./projects/waitingforchineke">
-                <img class="card-image" src="images/waiting for chineke/Mobile /1.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/waitingforchineke">
-                <p class="project-title">waiting for chineke.</p>
-            </a>
-        </div>
-
-        <div class="card bottom">
-            <a href="./projects/pain-a-discomfort-or-a-trigger">
-                <img class="card-image" src="images/pain a discomfort/mobille350px.webp" alt="projects-image">
-            </a>
-            <a class="card-description" href="./projects/pain-a-discomfort-or-a-trigger">
-                <p class="project-title">pain: a discomfort or a trigger.</p>
-            </a>
-        </div>
+            <div class="card bottom">
+                <a href="./projects/pain-a-discomfort-or-a-trigger">
+                    <img class="card-image" src="images/pain a discomfort/mobille350px.webp" alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/pain-a-discomfort-or-a-trigger">
+                    <p class="project-title">pain: a discomfort or a trigger.</p>
+                </a>
+            </div>
 
 
-        <!-- 
+            <!-- 
                 <div class="card">
                     <a href="link for image to go to">
                         <img class="card-image" width="300px" src="images/blob-scene-haikei.png" alt="projects-image">
@@ -246,9 +247,10 @@
         -->
 
 
-    </div>
+        </div>
 
-    <hr class="bottom-line" color="#800020" width="60%">
+        <hr class="bottom-line" color="#800020" width="60%">
+    </div>
 
     <!-- End of Project-->
 
@@ -275,7 +277,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script>
 
-     gsap.from(".extra", {
+        gsap.from(".extra", {
             scrollTrigger: {
                 trigger: ".blockquote-div",
                 start: -50, // when the top of the trigger hits the top of the viewport
@@ -302,7 +304,7 @@
             ease: "power1.inOut",
         });
 
-    
+
         let tl = gsap.timeline({
             scrollTrigger: {
                 trigger: ".blockquote-div",
@@ -313,18 +315,17 @@
         tl.from(".blockquote-div", { x: 200, opacity: 0, duration: 1.5 })
             .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
             .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
-            .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
+           .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".topline", { y: 200, opacity: 0, duration: 1.5 })
             .from(".card-container", { x: -200, opacity: 0, duration: 1.5 })
             .from(".card.bottom", { y: 200, opacity: 0, duration: 1.5 })
             .from(".bottom-line", { y: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-
-
     </script>
 
 
     <script src="script.js" async defer></script>
+    <script src="./scripts/quotes.js"></script>
 
 </body>
 
