--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -122,12 +122,50 @@
 
         <div class="container-video">
 
-            <div class="card">
+            <div class="video-card">
 
-    
-                <a class="card-description" href="./video/1.html">
-                    <p class="project-title">video 1.</p>
-                </a>
+                <iframe src="https://www.youtube-nocookie.com/embed/EdH92S5FRXE" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+
+                <p class="project-title">yetunde.</p>
+
+
+            </div>
+            <div class="video-card">
+
+                <iframe src="https://www.youtube.com/embed/SCQeYM4UUVw" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+
+                <p class="project-title">egungun.</p>
+
+
+            </div>
+            <div class="video-card">
+
+                <iframe src="https://www.youtube.com/embed/PqaLVRLGMmU" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+
+                <p class="project-title">abiku.</p>
+
+
+            </div>
+            <div class="video-card">
+
+                <iframe src="https://www.youtube.com/embed/rxeBbI0qsNA" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+
+                <p class="project-title">babarinde.</p>
+
+
             </div>
 
         </div>
@@ -163,10 +201,23 @@
 
     <script>
 
+            gsap.from(".extra", {
+                    scrollTrigger: {
+                        trigger: ".video-main",
+                        start: -50, // when the top of the trigger hits the top of the viewport
+                        end: "+=300", // end after scrolling 100px beyond the start
+                        // markers: true
+                        scrub: 1
+                    },
+                    stagger: { amount: 0.5 },
+                    scale: 0.8,
+                    duration: 1
+                });
+
         gsap.from(".footer-container", {
             scrollTrigger: {
-                trigger: ".video-main",
-                start: 500, // when the top of the trigger hits the top of the viewport
+                trigger: ".topline",
+                start: 700, // when the top of the trigger hits the top of the viewport
                 end: "+=700", // end after scrolling 100px beyond the start
                 // markers: true
                 scrub: 1
