--- a/projects/theanotherbeginning.html
+++ b/projects/theanotherbeginning.html
@@ -46,7 +46,7 @@
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
     <!--- Start of Navbar -->
-    <div>
+<div class="header">
 
         <nav class='navbar'>
 
