--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> argumented reality | neec nonso | visual artist</title>
+    <title> augumented reality | neec nonso | visual artist</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
