--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -148,10 +148,19 @@
                 for the lagos dream.
             </p>
 
-            <p class="thelastburial-paragraph">continue reading on
-                <a class="linktocontinuation" href="howtophotographylagostwo">how-to-photography-lagos-two </a>
+            <p class="thelastburial-paragraph">
+                making this project encouraged me to identify traces of communality in spaces that have been bleached
+                colourless; where
+                the liminal has atrophied into the profane, as the people seek to embrace the concept of individualism.
+                in
+                this project,
+                i also found an answer to a foresighted question: 'how does one make lagos to stand still for a
+                portrait.'
+                it is
+                noteworthy that lagos is attentive to theatrics.
             </p>
 
+          
 
         </div>
 
