--- a/projects/howtophotographylagostwo.html
+++ b/projects/howtophotographylagostwo.html
@@ -122,6 +122,30 @@
         <div class="boy-fraternity-div">
             <h1 class="boy-fraternity-title">how to photograph lagos 2</h1>
 
+            <p class="thelastburial-paragraph"> lagos is a city where slow and steady wins the race... philosophy is not
+                tolerated. it’s a city where
+                calmness is
+                misinterpreted as sluggishness and weakness. but you cannot blame the people, because in a city (whose
+                population is
+                above twenty million) most of whom have left their known world in the village for the ‘lagos dream’,
+                exhibiting the
+                innate desire of the communal is trivial, considered a waste of time, or as the people would say, ‘there
+                is
+                no time to
+                check time.'
+            
+            </p>
+            <p class="thelastburial-paragraph">kokowa is a wrestling sport popular in northern nigeria. agile men
+                wrestle
+                while gathered spectators cheer
+                their
+                champions. in 2018, i encountered this sport under obalende bridge. the sport has traveled from the far
+                north to lagos,
+                and the lagos audience is spectacular as they stood still to enjoy a game that they've missed (abandoned
+                in
+                the village)
+                for the lagos dream.
+            </p>
 
             <p class="thelastburial-paragraph">
                 making this project encouraged me to identify traces of communality in spaces that have been bleached
