--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -124,7 +124,7 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube-nocookie.com/embed/EdH92S5FRXE" title="YouTube video player"
+                <iframe src="https://www.youtube-nocookie.com/embed/EdH92S5FRXE?autoplay=1&controls=1&loop=1&mute=1" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
@@ -137,7 +137,7 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube.com/embed/SCQeYM4UUVw" title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/SCQeYM4UUVw?autoplay=1&controls=1&loop=1&mute=1" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
@@ -149,7 +149,7 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube.com/embed/PqaLVRLGMmU" title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/PqaLVRLGMmU?autoplay=1&controls=1&loop=1&mute=1" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
@@ -161,7 +161,7 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube.com/embed/rxeBbI0qsNA" title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/rxeBbI0qsNA?autoplay=1&controls=1&loop=1&mute=1"  frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
@@ -255,7 +255,7 @@
             .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
             .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".topline", { y: 200, opacity: 0, duration: 1.5 })
-            .from(".video-main", { x: -200, opacity: 0, duration: 1.5 })
+            .from(".video-main", { x: -100, opacity: 0, duration: 1.5 })
             .from(".bottom-line", { y: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
     </script>
