--- a/exhibitions/wanawari.html
+++ b/exhibitions/wanawari.html
@@ -118,23 +118,29 @@
 
     <!-- Exhibitions -->
 
-    <div class="items-container wana">
+    <main class="exhibition-main">
 
-        <section class="exhibition-intro">
 
-            <p class="exhibition-title"><a href="wanawari"> wa na wari </a>
-            </p>
-            <p class="exhibition-venue">wa na wari art space,</p>
-            <p class="exhibition-location">seatle,usa</p>
-        </section>
 
-        <section class="child-images">
+        <div class="items-container wana">
 
-            <img src="../exhibition/wa na wari - wa na wari art space seatle,usa/271859102_10224980653095621_3753920555993396334_n.jpg"
-                alt="">
-        </section>
+            <section class="exhibition-intro">
 
-    </div>
+                <p class="exhibition-title"><a href="wanawari"> wa na wari </a>
+                </p>
+                <p class="exhibition-venue">wa na wari art space,</p>
+                <p class="exhibition-location">seatle,usa</p>
+            </section>
+
+            <section class="child-images">
+
+                <img src="../exhibition/wa na wari - wa na wari art space seatle,usa/271859102_10224980653095621_3753920555993396334_n.jpg"
+                    alt="">
+            </section>
+
+        </div>
+
+    </main>
 
     <!-- End of Exhibition-->
 
@@ -158,11 +164,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
- 
+
 
     <script src="../script.js" async defer></script>
     <script src="../scripts/exhibitions.js"></script>
-  
+
 
 </body>
 
